# chatTCP_linsrv

./: CMakeLists.txt  README.md
src/: ClientRec.cpp  ClientRec.h  automutex.h  etcp.h  iofuncs.c  main.c  main.cpp  miscfuncs.c  skel.h  sofuncs.c
